--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,3 +1,8 @@
 p {
-    margin-bottom: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+
+hr {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 1.75rem;
 }
